0.9.11 (February 11, 2025)
- utf8 txt files were disfavored sources for generated txt files. Now they are favored. (fix #57)

0.9.10 (January 22, 2025)
- fixed typo in autorebuild 

0.9.9 (January 21, 2025)
- fixed autorebuild range construction

0.9.8 (January 20, 2025)
- added scripts to setup.py
- autorebuild also triggers on author adds and author deletions
- ebookmaker 0.13.1
- removed html.noimages and pdf.noimages from the 'all' build

0.9.7 (January 6, 2025)
- adds BlueskyWriter
- expunges twitter
- adds '.utf8' to deprecated file cleanup. fixes #50
- added AutoRebuild. Checks the database changelog to see if a title has been changed or an author has bees switched in the previous hour. If so, the book is rebuilt. Designed to be run by the cron-dopush script. Fixes #49

0.9.6 (September 18, 2024)
- fix OpenGraph URLs in html5
- allow cover jobs for non-text texts (audio, data, etc.)

0.9.5 (April 22, 2024)
- Change Facebook graph API version to 19.0. No changes affect us.
- update_from_backup_workflow changed to update_from_workflow to add pubinfo from json files made before version 0.7.0 was turned on (~ August 2021)
- ReparseCredits looks at books without credits and checks to see if parsing the pg header helps.
- update libgutenberg to 0.10.24, fixes author ordering

0.9.4 (February 26, 2024)
- fix bad error handling in FileInfo
- don't save new credit unless it's new
- libgutenberg 0.10.22 
    - fixes bugs that resulted in duplicate credits
    - fixes a problem that scraped credits overwrote the changes from json file

0.9.3 (February 13, 2024)
- credits should be changed, not appended. Fixes #35.
- added a script to remove extraneous credits
- Ebookmaker 0.12.40, libgutenberg 0.10.20

0.9.2 (December 7, 2023)
- fix RDFWriter to include the DCMIType ('Text') for books. It does not appear that this ever was done since the advent of EbookConverter. Fixes #42.
- Ebookmaker 0.12.37

0.9.1 (September 29, 2023)