@@ -7,6 +7,7 @@
 # 20200529 - fix issue with incomplete output (gbnewby)
 # 20200902 - copied from cron-latesttitles.sh and ripped out code (eshellman)
 # 20200904 - use 'medium' rather than 'small' cover images (gbn)
+# 20240717 - run only if there are new images (gbn)
 #
 
 # Where to build (we might need to have multiple dev v. production locations
@@ -18,10 +19,19 @@ cd ${BUILD}
 
 # git pull
 
+OLDSUM=`/usr/bin/sum ${BUILD}/_includes/latest_covers.html | /usr/bin/cut -f1 -d" "`
 
 # Fetch input, the latest covers:
-wget -O ${BUILD}/_includes/latest_covers.html "http://gutenberg1:8000/covers/medium/latest/10"
+# /usr/bin/wget --quiet -O ${BUILD}/_includes/latest_covers.html "http://gutenberg-app1:8000/covers/medium/latest/10"
+# This is going to appdev:
+/usr/bin/wget --quiet -O ${BUILD}/_includes/latest_covers.html "http://[2610:28:3090:3001:0:dead:cafe:100]:8000/covers/medium/latest/10"
 
+# Are the covers different than previously?
+NEWSUM=`/usr/bin/sum ${BUILD}/_includes/latest_covers.html | /usr/bin/cut -f1 -d" "`
+
+if [ ${OLDSUM} = ${NEWSUM} ] ; then
+    exit 0
+fi
 
 # This deploys the new content. Any errors will be returned; otherwise
 # output is quelled:
@@ -29,6 +39,8 @@ wget -O ${BUILD}/_includes/latest_covers.html "http://gutenberg1:8000/covers/med
 
 # Deploy the new content:
 cd ${BUILD}
+
+# jekyll is in ${HOME}/.rvm/gems
 jekyll build > /dev/null
 
 # was only need because cron-latesttitles.sh was called from another script, I think -eshellman
