@@ -1,5 +1,6 @@
 0.9.11 (February 11, 2025)
 - utf8 txt files were disfavored sources for generated txt files. Now they are favored. (fix #57)
+- synced jekyll and rebuild files cron scripts
 
 0.9.10 (January 22, 2025)
 - fixed typo in autorebuild 
